--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -12,20 +12,33 @@
     fill:white
 }
 
-
+div{
+    overflow: visible;
+}
 .socialSVG.you :hover{
     fill:rgb(170, 31, 31);
     transition-duration: 500ms ;
+    transform: scale(1.3);
+    transform-origin: 10%;
 }
 .socialSVG.face :hover{
     fill:rgb(77, 152, 202);
     transition-duration: 500ms ;
+    transform: scale(1.3);
+    transform-origin: 10%;
 }
 .socialSVG.insta :hover{
     fill:rgb(199, 178, 87);
+    height: 50px;
+    width: 50px;
     transition-duration: 500ms ;
+    transform: scale(1.3);
+    transform-origin: 10%;
 }
-
+path{
+    height: 50px;
+    width: 50px;
+}
 
 footer {
     position: fixed;
@@ -33,8 +46,8 @@ footer {
     width: 100vw;
   }
   svg {
-    font-size: 30px;
-    margin-left: 30px;
+    font-size: 15px;
+    margin-inline: 15px;
 
   }
  
@@ -43,4 +56,5 @@ footer {
     display: flex;
     justify-content: center;
     margin-block: 0.7rem;
+    overflow: visible;
   }
