--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,9 +1,16 @@
 a{
    text-decoration: none;
-   color: rgb(50, 25, 190);
    display: block;
+   height: 5vh;
+   color: white;
+}
+.container-fluid{
+   display: flex;
+   justify-content: space-around;
+   --bs-bg-opacity: 1;
+   background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important;
 }
 
 a:hover{
-   background-color: ;
+   background-color:grey;
 }
