ajuste de erro do import

--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -11,6 +11,6 @@ a{
    background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important;
 }
 
-a:hover{
+.container-fluid a:hover{
    background-color:grey;
 }
