--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root{
+  --bg-color:rgb(219, 219, 219);
+  --mn-primary-color:rgb(100, 16, 100);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--bg-color);
 }
 
 code {
@@ -12,6 +18,3 @@ code {
     monospace;
 }
 
-body{
-  background-color: rgb(219, 219, 219);
-}
