--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  max-height: 115vh;
   display: flex;
   flex-direction: column;
   align-items: center;
