ajuste em footer e nas imgs dos produtos

--- a/src/pages/Sobre/style.css
+++ b/src/pages/Sobre/style.css
@@ -11,7 +11,7 @@
     min-width: 15%;
     height: calc(100% - 10px);
   }
-  
+/*   
   .navbar-brand:hover {
     opacity: 0.3;
   }
@@ -74,4 +74,4 @@
       width: 15rem;
       height: 15rem;
     }
-  }
+  } */
