--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,39 +1,43 @@
 .social{
     stroke:#000;
 
-    stroke-width:2;
+    stroke: width 5px;
     stroke-linecap:round;
     stroke-linejoin:round ;
 }
 
 .socialSVG{
-    width:30px;
-    height:30px;
+    width:25px;
+    height:25px;
     fill:white
+}
+
+.socialSVG:hover{
+    transition-duration: 200ms ;
+    width:35px;
+    height:35px;
+    margin-bottom: 3rem;
+
 }
 
 div{
     overflow: visible;
 }
-.socialSVG.you :hover{
-    fill:rgb(170, 31, 31);
+.you :hover{
     transition-duration: 200ms ;
-    transform: scale(1.3);
-    transform-origin: 11%;
+    fill:rgb(170, 31, 31);
+
+
 }
-.socialSVG.face :hover{
+.face :hover{
     fill:rgb(77, 152, 202);
     transition-duration: 200ms ;
-    transform: scale(1.3);
-    transform-origin: 10%;
+
 }
-.socialSVG.insta :hover{
+.insta :hover{
     fill:rgb(199, 178, 87);
-    height: 50px;
-    width: 50px;
     transition-duration: 200ms ;
-    transform: scale(1.3);
-    transform-origin: 0%;
+
 }
 path{
     height: 50px;
@@ -48,7 +52,7 @@ path{
   }
   svg {
     font-size: 15px;
-    margin-inline: 15px;
+    margin-inline: 10px;
 
   }
  
