--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -5,4 +5,12 @@ h1{
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 40vh;
+}
+
+.mb-6{
+    margin-bottom: 4rem!important; 
+}
+.titulo{
+    margin: 0;
 }
