--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 :root{
   --bg-color:rgb(219, 219, 219);
+  
   --mn-primary-color:rgb(100, 16, 100);
+}
+*{
+  height: 120vh;
 }
 
 body {
@@ -11,6 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-color);
+
 }
 
 code {
