--- a/src/pages/Produto/components/CardProduto/style.css
+++ b/src/pages/Produto/components/CardProduto/style.css
@@ -2,3 +2,27 @@
     align-self: center;
 
 }
+
+.cardHover-1:hover{
+       transform: scale(1.05);
+       transition: 300ms;
+       box-shadow: 1px 1px 3px 5px rgb(100, 16, 100) ;
+
+}
+
+.btn-primary:hover{
+    transition: 300ms;
+    background-color: rgb(100, 16, 100);
+    border: 1px solid rgb(100, 16, 100);
+
+}
+
+.btn-outline-primary:hover{
+    background-color: rgb(100, 16, 100);
+    border:1px solid white;
+    color: white;
+}
+
+.card-body{
+    padding: .5rem .5rem;
+}
